# PolarizasionExperiment

./: .gitignore
python/: AnalyzePol.py  CreateFiles.py  FileCheck.py  MainAnalyze.py  PlotStokes3D.py  design.txt  main.py  setup.cfg
python/20230424/: PlotStokes3D.py
python/20230425/: 20230425_10x.txt  20230425_40x.txt  PlotStokes3D.py
python/20230426/: 20230426_10x.txt  PlotStokes3D.py
python/analyzer/controller/: controller.py
python/analyzer/models/: analyze.py  fiber_measure.py  input_data.py  robot.py  s_parameter.py
python/analyzer/templates/: diameter.txt  goodbye.txt  hello.txt  stokes_h.txt
python/analyzer/views/: console.py
python/controller/: controller.py
python/data/20230424/: 20230424_10x.txt  20230424_40x.txt  20230424_5x.txt
python/data/20230425/: 20230425_5x.txt
python/data/20230426/: 20230426_10x.txt  20230426_40x.txt  20230426_5x.txt  PlotStokes3D.py
python/data/20230501/: 20230501_10x.txt  20230501_40x.txt  20230501_5x.txt
python/data/20230502/: 20230502_10x.txt  20230502_40x.txt  20230502_5x.txt  20230502_FiberDiameter.txt  FiberLength_20230502.txt
python/data/20230503/: 20230503_10x.txt  20230503_40x.txt  20230503_5x.txt  FiberDiameter_20230503.txt
python/data/20230504/: 20230504_40x.txt  20230504_5x.txt  FiberDiameter_20230504.txt
python/data/20230505/: 20230505_10x.txt  20230505_40x.txt
python/models/: input_data.py  robot.py
python/old/: PCC.py
python/old/package/: .gitignore  (+2 more)
python/package/: FiberLength.py  FiberMeasure.py  Plot3D.py
python/templates/: hello.txt  stokes_h.txt
python/views/: console.py
(+11 files in other folders)
