[metadata]
name = analyzer
version = 1.0.0
# license = file: license.txt


[options]
install_requires =
    numpy
    matplotlib
    questionary

# [options.extras_require]
# develop =
#     dev_packageA
#     dev_packageB

# [options.entry_points]
# console_scripts =
#     foo = package_name.module_name:func_name
#     foo_dev = package_name.module_name:func_name [develop]
# gui_scripts =
#     bar = gui_package_name.gui_module_name:gui_func_name

